# Camellia

./: CMakeLists.txt  LICENSE.txt
drivers/: CMakeLists.txt
drivers/Brendan/: CMakeLists.txt  LinearElasticity2D.cpp  LinearElasticity3D.cpp  LinearElasticity3DGMG.cpp  OldroydB.cpp  OldroydBDriver.cpp  StVenantKirchhoffElasticity3D.cpp
drivers/Convection/: SpaceTimePrototypeConvectingConeDriver.cpp
drivers/DPGTests/: CMakeLists.txt  ConfusionBilinearForm.cpp  ConfusionBilinearForm.h  ConfusionManufacturedSolution.cpp  ConfusionManufacturedSolution.h  ConfusionProblemLegacy.cpp  ConfusionProblemLegacy.h  CurvilinearMeshTests.cpp  CurvilinearMeshTests.h  DPGTests.cpp  DPGTests.h  ElementTests.cpp  ElementTests.h  FunctionTests.cpp  FunctionTests.h  GDAMinimumRuleTests.cpp  GDAMinimumRuleTests.h  GMGTests.cpp  GMGTests.h  HConvergenceStudyTests.cpp  HConvergenceStudyTests.h  IncompressibleFormulationsTests.cpp  IncompressibleFormulationsTests.h  LinearTermTests.cpp  LinearTermTests.h  LobattoBasisTests.cpp  LobattoBasisTests.h  MPIWrapperTests.cpp  MPIWrapperTests.h  MeshRefinementTests.cpp  MeshRefinementTests.h  MeshTestSuite.cpp  MeshTestSuite.h  MeshTopologyTests.cpp  MeshTopologyTests.h  MultiBasisTests.cpp  MultiBasisTests.h  ParametricCurveTests.cpp  ParametricCurveTests.h  PatchBasisTests.cpp  (+24 more)
drivers/IncompressibleNS/: NavierStokesCavityFlowContinuationAdaptive.cpp  NavierStokesCavityFlowContinuationFixedMesh.cpp  NavierStokesCavityFlowDriver.cpp
drivers/MeshMemorySize/: MeshMemorySize.cpp
drivers/Preconditioning/: CMakeLists.txt  ConditionNumberTestsDriver.cpp  MultigridPreconditioningDriver.cpp  NavierStokesCavityFlowGMGDriver.cpp  PreconditioningTestsDriver.cpp  StokesCavityFlowGMGDriver.cpp
drivers/Stokes/: CMakeLists.txt  StokesBackwardFacingStepDriver.cpp  StokesCavityFlowDriver3D.cpp
examples/: CMakeLists.txt
examples/ConvectionReactionDiffusion/: CMakeLists.txt  ConditionNumberMinimizationExperiment.cpp  ConvectionDiffusionExample.cpp  ConvectionReactionExample.cpp  PoissonHessianGradientIndicatorExperiment.cpp  RebuildLookupsPerformanceTest.cpp
examples/DGAdvection/: DGAdvectionExample.cpp
examples/DPGAdvection/: DPGAdvectionExample.cpp
examples/HeatSpaceTime/: HeatSpaceTimeExample.cpp
examples/MOABReader/: MOABReaderExample.cpp
examples/NavierStokesCavityFlow/: NavierStokesCavityFlowExample.cpp
examples/Poisson1D/: Poisson1D.cpp
examples/Poisson1DMOAB/: Poisson1DMOAB.cpp
examples/StokesBackwardFacingStep/: StokesBackwardFacingStepExample.cpp
examples/StokesCavityFlow/: StokesCavityFlowExample.cpp  StokesCavityFlowSpaceTimeExample.cpp
licenses/: LICENSE-Camellia.txt  LICENSE-DPGTrilinos.txt  LICENSE-Ifpack.txt  LICENSE-Intrepid.txt  LICENSE-Teuchos.txt
manual-examples/: CMakeLists.txt
manual-examples/ch02-StokesCavity/: CMakeLists.txt  ch02-StokesCavity.cpp
src/Basis/: BasisCache.cpp  BasisEvaluation.cpp  BasisFactory.cpp  BasisReconciliation.cpp  CubatureFactory.cpp  PhysicalPointCache.cpp  SpaceTimeBasisCache.cpp  doubleBasisConstruction.cpp
src/CellTools/: CamelliaCellTools.cpp
src/ConvergenceStudy/: HConvergenceStudy.cpp
src/Debug/: CamelliaDebugUtility.cpp  TimeLogger.cpp  TimeLogger.h
src/DofOrdering/: DofOrdering.cpp  DofOrderingFactory.cpp
src/Formulations/: CompressibleNavierStokesFormulation.cpp  ConvectionDiffusionFormulation.cpp  (+17 more)
unit_tests/: AdditiveSchwarzTests.cpp  BCTests.cpp  BFTests.cpp  BasisCacheTests.cpp  BasisFactoryTests.cpp  BasisReconciliationTests.cpp  BasisSumFunctionTests.cpp  BasisTests.cpp  CamelliaCellToolsTests.cpp  CellDataMigrationTests.cpp  CellTests.cpp  CellTopologyTests.cpp  ConvectionDiffusionReactionFormulationTests.cpp  DofOrderingFactoryTests.cpp  DofOrderingTests.cpp  Epetra_Operator_to_Epetra_MatrixTests.cpp  ErrorIndicatorTests.cpp  ExampleTests.cpp  FunctionTests.cpp  GDAMinimumRuleTests.cpp  GMGOperatorTests.cpp  GMGSolverTests.cpp  LinearTermTests.cpp  MPIWrapperTests.cpp  MeshRefinementTests.cpp  MeshTests.cpp  MeshToolsTests.cpp  MeshTopologyTests.cpp  MeshTopologyViewTests.cpp  MeshTransferFunctionTests.cpp  MeshTransformationFunctionTests.cpp  NavierStokesVGPFormulationTests.cpp  OverlappingRowMatrixTests.cpp  ProjectorTests.cpp  RangeListTests.cpp  RefinementPatternTests.cpp  RefinementStrategyTests.cpp  RieszRepTests.cpp  SerialDenseWrapperTests.cpp  SolutionTests.cpp  (+8 more)
(+318 files in other folders)
