project(ConvectionDiffusionReactionExamples)

add_executable(ConvectionReactionExample ConvectionReactionExample.cpp)
target_link_libraries(ConvectionReactionExample Camellia)

add_executable(ConvectionDiffusionExample ConvectionDiffusionExample.cpp)
target_link_libraries(ConvectionDiffusionExample Camellia)

add_executable(RebuildLookupsPerformanceTest RebuildLookupsPerformanceTest.cpp)
target_link_libraries(RebuildLookupsPerformanceTest Camellia)