project(ConvectionDiffusionReactionExamples)

add_executable(ConditionNumberMinimizationExperiment ConditionNumberMinimizationExperiment.cpp)
target_link_libraries(ConditionNumberMinimizationExperiment Camellia)

add_executable(ConvectionReactionExample ConvectionReactionExample.cpp)
target_link_libraries(ConvectionReactionExample Camellia)

add_executable(ConvectionDiffusionExample ConvectionDiffusionExample.cpp)
target_link_libraries(ConvectionDiffusionExample Camellia)

add_executable(PoissonHessianGradientIndicatorExperiment PoissonHessianGradientIndicatorExperiment.cpp)
target_link_libraries(PoissonHessianGradientIndicatorExperiment Camellia)

add_executable(RebuildLookupsPerformanceTest RebuildLookupsPerformanceTest.cpp)
target_link_libraries(RebuildLookupsPerformanceTest Camellia)